--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,9 @@ jobs:
 
     - name: s3 deploy
       run: aws s3 sync . s3://bayern30/ --size-only
+
+    - name: Notify SNS
+      run: |
+        aws sns publish arn:aws:sns:us-east-1:090159890550:testnotification\
+          --topic-arn  arn:aws:sns:us-east-1:090159890550:testnotification\
+          --message "Deployment to S3 completed. Files have been uploaded to s3://bayern30/."
