--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Notify SNS
       run: |
         aws sns publish \
-          --topic-arn  arn:aws:sns:us-east-1:090159890550:testnotification\
+          --topic-arn  arn:aws:sns:us-east-1:090159890550:unsubscribe\
           --message "Deployment to S3 completed. Files have been uploaded to s3://bayern30/."
